--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 </pre>
 
-    Kad darbas nedigtų juos publikuojame. Galite atsisiųsti kaip <a href="upes/upes.zip">vieną</a> arba dalimis:
+    Kad darbas nedingtų juos publikuojame. Galite atsisiųsti kaip <a href="upes/upes.zip">vieną</a> arba dalimis:
     <br />
     <br />
     <br />
