--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
 
 </pre>
 
-    Kad darbas nedingtų juos publikuojame. Galite atsisiųsti kaip <a href="upes/upes.zip">vieną</a> arba dalimis:
+    Kad darbas nedingtų juos publikuojame. Galite atsisiųsti kaip <a href="upes/upes.zip">vieną failą</a> arba iš <a
+        href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
     <br />
     <br />
     <br />
