--- a/public/index.html
+++ b/public/index.html
@@ -40,27 +40,27 @@
     <br />
     <br />
     <br />
-    <a href="dubysa.png">dubysa.png</a>
+    <a href="upes/dubysa.png">dubysa.png</a>
     <br />
-    <a href="merkio_aukstupys.png">merkio_aukstupys.png</a>
+    <a href="upes/merkio_aukstupys.png">merkio_aukstupys.png</a>
     <br />
-    <a href="nemunas_minijos aukstupys.png">nemunas_minijos aukstupys.png</a>
+    <a href="upes/nemunas_minijos aukstupys.png">nemunas_minijos aukstupys.png</a>
     <br />
-    <a href="nemunas_ula_ancia_merkys.jpg">nemunas_ula_ancia_merkys.jpg</a>
+    <a href="upes/nemunas_ula_ancia_merkys.jpg">nemunas_ula_ancia_merkys.jpg</a>
     <br />
-    <a href="sventoji_aukstupys.png">sventoji_aukstupys.png</a>
+    <a href="upes/sventoji_aukstupys.png">sventoji_aukstupys.png</a>
     <br />
-    <a href="zeimena.png">zeimena.png</a>
+    <a href="upes/zeimena.png">zeimena.png</a>
     <br />
-    <a href="jura.png">jura.png</a>
+    <a href="upes/jura.png">jura.png</a>
     <br />
-    <a href="nemunas_kaunas_pagegiai.jpg">nemunas_kaunas_pagegiai.jpg</a>
+    <a href="upes/nemunas_kaunas_pagegiai.jpg">nemunas_kaunas_pagegiai.jpg</a>
     <br />
-    <a href="nemunas_minijos zemupys.png">nemunas_minijos zemupys.png</a>
+    <a href="upes/nemunas_minijos zemupys.png">nemunas_minijos zemupys.png</a>
     <br />
-    <a href="neris.png">neris.png</a>
+    <a href="upes/neris.png">neris.png</a>
     <br />
-    <a href="sventoji_zemupys.png">sventoji_zemupys.png</a><br />
+    <a href="upes/sventoji_zemupys.png">sventoji_zemupys.png</a><br />
 
     <p>
         <b><i>Iki, tegyvuoja žygiai!</i></b>
