--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
     <h1>Lietuvos upės</h1>
     <p>
-        2021 Andrius Lavrinovicius Vandeninkų grupėje FB patalpino šį teksta:
+        2021 viešpaties metais Vandeninkų grupėje FB nuskambėjo šis tekstas:
     </p>
     <pre>
 
@@ -35,8 +35,9 @@
 
 </pre>
 
-    Kad darbas nedingtų juos publikuojame. Galite atsisiųsti kaip <a href="upes/upes.zip">vieną failą</a> arba iš <a
-        href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
+    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė Aidė Macerinskienė. Galite atsisiųsti
+    kaip <a href="upes/upes.zip">vieną failą</a> arba
+    iš <a href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
     <br />
     <br />
     <br />
