--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <pre>
 
     Kažkada, kai buvo dar toksai Turizmo departamentas, geri žmonės padarė gerą darbą ir buvo padėtas pamatas kuriant
-    Nacionalinį vandens trasų planą -
-    https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.338690?jfwid=-evwipo4tr&fbclid=IwAR05EGbZ9yRV-l9vz0JVBtv-QocPPKMZDZ8HFMlaazv5jljVgJiaZHo5eG4.
+    Nacionalinį vandens trasų planą 
+    <a href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.338690?jfwid=-evwipo4tr&fbclid=IwAR05EGbZ9yRV-l9vz0JVBtv-QocPPKMZDZ8HFMlaazv5jljVgJiaZHo5eG4.">https://e-seimas.lrs.lt/po...</a>
     . Departamentą panaikino, gera idėja buvo pamiršta, elektroninė žemėlapių versija dingo. Į mano paklausimą, tokia
     @ekonomikosministerija atsakė, kad „...Kadangi departamentas panaikintas 2019 m., visi dokumentai perduoti
     archyvams. Jei pavyks ką daugiau sužinoti iš kolegų, informuosime Jus“. Suprask – nieko nežinom, pamiršk žmogau.
@@ -35,7 +35,7 @@
 
 </pre>
 
-    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė Aidė Macerinskienė. Galite atsisiųsti
+    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė prof. dr. Aida Mačerinskienė ir . Galite atsisiųsti
     kaip <a href="upes/upes.zip">vieną failą</a> arba
     iš <a href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
     <br />
