--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,26 @@
 <body>
     <h1>Lietuvos upės</h1>
     <p>
-        2021 viešpaties metais Vandeninkų grupėje FB nuskambėjo šis tekstas:
+        2021 viešpaties metais <a href="https://www.facebook.com/groups/253110944816386"/>Vandeninkų grupėje FB</a> nuskambėjo šis tekstas:
     </p>
-    <pre>
+    <div>
 
-    Kažkada, kai buvo dar toksai Turizmo departamentas, geri žmonės padarė gerą darbą ir buvo padėtas pamatas kuriant
+    <blockquote>Kažkada, kai buvo dar toksai Turizmo departamentas, geri žmonės padarė gerą darbą ir buvo padėtas pamatas kuriant
     Nacionalinį vandens trasų planą 
     <a href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.338690?jfwid=-evwipo4tr&fbclid=IwAR05EGbZ9yRV-l9vz0JVBtv-QocPPKMZDZ8HFMlaazv5jljVgJiaZHo5eG4.">https://e-seimas.lrs.lt/po...</a>
-    . Departamentą panaikino, gera idėja buvo pamiršta, elektroninė žemėlapių versija dingo. Į mano paklausimą, tokia
+    .<br/> Departamentą panaikino, gera idėja buvo pamiršta, elektroninė žemėlapių versija dingo. Į mano paklausimą, tokia
     @ekonomikosministerija atsakė, kad „...Kadangi departamentas panaikintas 2019 m., visi dokumentai perduoti
     archyvams. Jei pavyks ką daugiau sužinoti iš kolegų, informuosime Jus“. Suprask – nieko nežinom, pamiršk žmogau.
-
+<br/>
     Bet, kažkaip stebuklingai pavyko rasti žemėlapių e-versiją. Aišku žemėlapiai keliolikos metų senumo, bet šiai
     dienai, man atrodo, tai yra geriausia kas buvo sukurta – sužymėti intakai, atstumai, poilsiavietės, lankytinos
     vietos, draustiniai ir t.t. Medžiaga pravers planuojant turistinius plaukimo maršrutus, keliaujant pagrindinėmis
     Lietuvos upėmis.
 
+</blockquote>
+</div>
 
-</pre>
-
-    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė prof. dr. Aida Mačerinskienė ir . Galite atsisiųsti
+    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė prof. dr. Aida Mačerinskienė. Galite atsisiųsti
     kaip <a href="upes/upes.zip">vieną failą</a> arba
     iš <a href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
     <br />
