--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 </blockquote>
 </div>
 
-    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė prof. dr. Aida Mačerinskienė. Galite atsisiųsti
+    Kad didelis darbas nedingtų juos publikuojame. Mūsų žiniomis žemėlapius kūrė prof. dr. Aida Mačerinskienė ir Robertas Pučinskas. Galite atsisiųsti
     kaip <a href="upes/upes.zip">vieną failą</a> arba
     iš <a href="https://github.com/tkukis/lietuvos-upes">git</a> arba dalimis:
     <br />
